--- a/index.html
+++ b/index.html
@@ -6,41 +6,65 @@
   <title>dekapurinportfolio</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
+    html { scroll-behavior: smooth; }
   </style>
 </head>
 <body>
-  <header class="fade-in">
+
+  <nav>
+    <ul>
+      <li><a href="#about">概要</a></li>
+      <li><a href="#works">個人制作</a></li>
+      <li><a href="#achievements">実績</a></li>
+      <li><a href="#contact">SNS</a></li>
+    </ul>
+  </nav>
+
+  <header id="hero" class="fade-in">
     <h1>dekapurinportfolio</h1>
-    <p>こんにちは、私は仮の紹介文を書いている3DCGアーティストです。</p>
+    <p>ようこそ、3DCGとロボットを愛する表現者のポートフォリオへ。</p>
   </header>
 
-  <main>
-    <section id="works" class="fade-in">
-      <h2>Works</h2>
-      <div class="work-gallery">
-        <div class="work">
-          <div class="image-container">
-            <img src="images/work1.jpg" alt="作品タイトル1" />
-          </div>
-          <h3>作品タイトル1</h3>
-          <p>作品の簡単な説明です（後で編集可能）</p>
-          <a href="https://example.com" target="_blank">詳細を見る</a>
-        </div>
-        <!-- 追加作品もこの形式で増やしてください -->
-      </div>
-    </section>
+  <section id="about" class="fade-in">
+    <h2>概要</h2>
+    <p>
+      私はBlenderを中心に、アニメーション、スカルプト、ハードサーフェスなどを活かして作品制作をしています。<br>
+      このページでは、個人制作や実績、SNSなどをまとめています。
+    </p>
+  </section>
 
-    <section id="contact" class="fade-in">
-      <h2>Contact</h2>
-      <p>X（Twitter）でご連絡ください。</p>
-      <ul>
-        <li><a href="https://twitter.com/yourhandle" target="_blank">Twitter</a></li>
-      </ul>
-    </section>
-  </main>
+  <section id="works" class="fade-in">
+    <h2>個人制作</h2>
+    <div class="work-gallery">
+      <div class="work">
+        <div class="image-container">
+          <img src="images/work1.jpg" alt="作品タイトル1" />
+        </div>
+        <h3>作品タイトル1</h3>
+        <p>作品の簡単な説明（後で編集可能）</p>
+        <a href="https://example.com" target="_blank">詳細を見る</a>
+      </div>
+      <!-- 他の作品も同様に追加 -->
+    </div>
+  </section>
+
+  <section id="achievements" class="fade-in">
+    <h2>実績</h2>
+    <ul>
+      <li>2023年：「○○コンテスト」入賞</li>
+      <li>2024年：展示会「●●展」参加</li>
+      <li>2025年：ロボットフェス出展予定</li>
+    </ul>
+  </section>
+
+  <section id="contact" class="fade-in">
+    <h2>各種SNS</h2>
+    <ul>
+      <li><a href="https://twitter.com/yourhandle" target="_blank">Twitter</a></li>
+      <li><a href="https://instagram.com/yourhandle" target="_blank">Instagram</a></li>
+      <li><a href="mailto:yourmail@example.com">Email</a></li>
+    </ul>
+  </section>
 
   <footer class="fade-in">
     <p>&copy; 2025 dekapurin</p>
