--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+  <!-- ナビゲーション -->
   <nav>
     <ul>
       <li><a href="#about">概要</a></li>
@@ -20,11 +21,13 @@
     </ul>
   </nav>
 
+  <!-- ヒーロー -->
   <header id="hero" class="fade-in">
     <h1>dekapurinportfolio</h1>
     <p>ようこそ、3DCGとロボットを愛する表現者のポートフォリオへ。</p>
   </header>
 
+  <!-- 概要 -->
   <section id="about" class="fade-in">
     <h2>概要</h2>
     <p>
@@ -33,6 +36,7 @@
     </p>
   </section>
 
+  <!-- 個人制作 -->
   <section id="works" class="fade-in">
     <h2>個人制作</h2>
     <div class="work-gallery">
@@ -44,10 +48,11 @@
         <p>作品の簡単な説明（後で編集可能）</p>
         <a href="https://example.com" target="_blank">詳細を見る</a>
       </div>
-      <!-- 他の作品も同様に追加 -->
+      <!-- 作品を追加していってください -->
     </div>
   </section>
 
+  <!-- 実績 -->
   <section id="achievements" class="fade-in">
     <h2>実績</h2>
     <ul>
@@ -57,6 +62,7 @@
     </ul>
   </section>
 
+  <!-- SNS・連絡先 -->
   <section id="contact" class="fade-in">
     <h2>各種SNS</h2>
     <ul>
@@ -66,6 +72,7 @@
     </ul>
   </section>
 
+  <!-- フッター -->
   <footer class="fade-in">
     <p>&copy; 2025 dekapurin</p>
   </footer>
